[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/player/balls/GoldPlayerShow.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/player/balls/FirePlayerShow.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/world/GridMapOver.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui/select_screen.png" type="Texture" id=4]
[ext_resource path="res://scenes/menu/buttons/select_button.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/menu/PlayerSelect.gd" type="Script" id=6]
[ext_resource path="res://scenes/menu/buttons/start_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/menu/Stats.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/player/balls/CabbagePlayerShow.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.8, 0.596078, 0.180392, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0.133333, 0.0823529, 0.0823529, 1 )
border_blend = true
corner_radius_bottom_left = 90
corner_detail = 18
expand_margin_top = 5.0
shadow_color = Color( 0.156863, 0.109804, 0.109804, 0.6 )
shadow_size = 8
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.54902, 0, 0, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.203922, 0.113725, 0.113725, 1 )
corner_radius_bottom_left = 90
corner_detail = 18
expand_margin_top = 5.0
shadow_color = Color( 0.156863, 0.109804, 0.109804, 0.6 )
shadow_size = 4
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.686275, 0.462745, 0.00392157, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0.133333, 0.0823529, 0.0823529, 1 )
border_blend = true
corner_radius_bottom_left = 90
corner_detail = 18
expand_margin_top = 5.0
shadow_color = Color( 0.156863, 0.109804, 0.109804, 0.6 )
shadow_size = 8
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.470588, 0.470588, 0.470588, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.203922, 0.113725, 0.113725, 1 )
corner_radius_bottom_left = 90
corner_detail = 18
expand_margin_top = 5.0
shadow_color = Color( 0.156863, 0.109804, 0.109804, 0.6 )
shadow_size = 4
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.215686, 0.313726, 0.411765, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.203922, 0.113725, 0.113725, 1 )
corner_radius_bottom_left = 90
corner_detail = 18
expand_margin_top = 5.0
shadow_color = Color( 0.156863, 0.109804, 0.109804, 0.6 )
shadow_size = 4
shadow_offset = Vector2( 2, 2 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://assets/ui/Orbitron-Medium.ttf"

[sub_resource type="DynamicFont" id=7]
size = 40
outline_size = 1
outline_color = Color( 0.117647, 0.101961, 0.101961, 1 )
use_filter = true
font_data = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.470588, 0.470588, 0.470588, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.203922, 0.113725, 0.113725, 1 )
corner_radius_bottom_right = 90
corner_detail = 18
expand_margin_top = 5.0
shadow_color = Color( 0.156863, 0.109804, 0.109804, 0.6 )
shadow_size = 4
shadow_offset = Vector2( 2, 2 )

[node name="PlayerSelect" type="Spatial"]
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 539.5 ],
"_edit_vertical_guides_": [ 959.879 ]
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="CanvasLayer"]
margin_top = 180.0
margin_right = 1920.0
margin_bottom = 228.0
size_flags_horizontal = 5
size_flags_vertical = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prev" parent="CanvasLayer/Buttons" instance=ExtResource( 5 )]
margin_left = 170.539
margin_top = 359.5
margin_right = 330.539
margin_bottom = 409.5
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 7 )
text = "prev"

[node name="Start" parent="CanvasLayer/Buttons" instance=ExtResource( 7 )]
margin_left = 903.0
margin_top = 750.0
margin_right = 1063.0
margin_bottom = 800.0

[node name="Next" parent="CanvasLayer/Buttons" instance=ExtResource( 5 )]
margin_left = 1593.84
margin_top = 359.5
margin_right = 1753.84
margin_bottom = 409.5
custom_styles/disabled = SubResource( 8 )

[node name="Stats" parent="CanvasLayer" instance=ExtResource( 8 )]
margin_top = 638.0
margin_right = 1920.0
margin_bottom = 810.0

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 2.70151e-08, -8.3144e-08, 0, 0.951057, 0.309017, 8.74228e-08, 0.309017, -0.951057, 50, 25, -50 )
current = true
fov = 50.0
far = 500.0

[node name="Players" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20.646 )

[node name="Cabbage" parent="Players" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -150, 7.4317, 0 )

[node name="GardenCage" parent="Players/Cabbage" index="0"]
transform = Transform( 0.940788, -0.0759994, -0.330366, 0.167731, 0.951251, 0.258819, 0.294591, -0.298907, 0.907673, 0, 0, 0 )

[node name="FirePlayer" parent="Players" instance=ExtResource( 2 )]
transform = Transform( 0.966623, -0.0805548, -0.24321, 0.163176, 0.925417, 0.34202, 0.19752, -0.370291, 0.907673, 50, 8.477, 10 )

[node name="GoldPlayer" parent="Players" instance=ExtResource( 1 )]
transform = Transform( 0.962884, -0.101762, -0.25, 0.167731, 0.951252, 0.258819, 0.211475, -0.291146, 0.933012, -50, 7.046, 10 )

[node name="GridMap" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, -1, 0, 0, 0 )
data = {
"cells": PoolIntArray( 0, 65534, 131082, 1, 65534, 131082, 2, 65534, 655363, 3, 65534, 655363, 65531, 65534, 3, 65532, 65534, 3, 65533, 65534, 655363, 65534, 65534, 983049, 65535, 65534, 983049, 65536, 65534, 131082, 65537, 65534, 131082, 65538, 65534, 655363, 65539, 65534, 655363, 131067, 65534, 3, 131068, 65534, 3, 131069, 65534, 983057, 131070, 65534, 983049, 131071, 65534, 983049, 131072, 65534, 655363, 131073, 65534, 655363, 131074, 65534, 655363, 131075, 65534, 655363, 196603, 65534, 3, 196604, 65534, 3, 196605, 65534, 655363, 196606, 65534, 655363, 196607, 65534, 655363, -196608, 65534, 655363, -196607, 65534, 655363, -196606, 65534, 655363, -196605, 65534, 655363, -131077, 65534, 3, -131076, 65534, 3, -131075, 65534, 655363, -131074, 65534, 655363, -131073, 65534, 655363, -131072, 65534, 655363, -131071, 65534, 655363, -131070, 65534, 655363, -131069, 65534, 655363, -65541, 65534, 3, -65540, 65534, 3, -65539, 65534, 655363, -65538, 65534, 655363, -65537, 65534, 655363, -65536, 65534, 655363, -65535, 65534, 655363, -65534, 65534, 655363, -65533, 65534, 655363, -5, 65534, 3, -4, 65534, 3, -3, 65534, 655363, -2, 65534, 655363, -1, 65534, 655363, 0, 65535, 458781, 1, 65535, 327709, 2, 65535, 458781, 65531, 65535, 327709, 65532, 65535, 458781, 65533, 65535, 327709, 65534, 65535, 458781, 65535, 65535, 327709, 65536, 65535, 458781, 65537, 65535, 327709, 65538, 65535, 458781, 131067, 65535, 327709, 131068, 65535, 458781, 131069, 65535, 327709, 131070, 65535, 458781, 131071, 65535, 327709, 131072, 65535, 262173, 131073, 65535, 262173, 196604, 65535, 262173, 196605, 65535, 262173, 196606, 65535, 262173, 196607, 65535, 262173, -65536, 65535, 983041, -65535, 65535, 983041, -4, 65535, 1179661, -3, 65535, 1179661, -2, 65535, 1179658, -1, 65535, 1179658 )
}

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.0864429, 0.996257, 0, -0.996257, -0.0864429, 0, 133.961, -179.595 )
shadow_enabled = true
directional_shadow_max_distance = 120.0

[connection signal="changed_selection" from="." to="CanvasLayer/Stats" method="_on_PlayerSelect_changed_selection"]
[connection signal="pressed" from="CanvasLayer/Buttons/Prev" to="." method="_on_Prev_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/Next" to="." method="_on_Next_pressed"]

[editable path="CanvasLayer/Buttons/Prev"]
[editable path="CanvasLayer/Buttons/Start"]
[editable path="Players/Cabbage"]
[editable path="Players/FirePlayer"]
[editable path="Players/FirePlayer/Pointer/Pipes"]
